cli/tests/testdata/compat/test_runner/cjs.out
running 2 tests from ./compat/test_runner/cjs.js
Correct assertion ... ok ([WILDCARD])
Failed assertion ... FAILED ([WILDCARD])

 ERRORS 

Failed assertion => ./compat/test_runner/cjs.js:[WILDCARD]
error: AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   10
+   20

    Error.captureStackTrace(this, stackStartFn || stackStartFunction);
          ^
[WILDCARD]

 FAILURES 

Failed assertion => ./compat/test_runner/cjs.js:[WILDCARD]

FAILED | 1 passed | 1 failed ([WILDCARD])

error: Test failed
